Add content for .right-links
Missing in first commit

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
         <div class="header">
             <div class="right-items">
+                <p>Header Logo</p>
             </div>
             <div class="left-items">
                 <ul>
