--- a/index.html
+++ b/index.html
@@ -21,10 +21,16 @@
         
         <div class="main">
             <div class="image">
-
+                <div class="signup">
+                    <h2>This website is awesome</h2>
+                    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+                    <button>Sign up</button>
+                </div>
+                <div class="placeholder">this is a placeholder for an image</div>
+            </div>
             </div>
             <div class="info">
-
+                
             </div>
             <div class="hero">
 
