Add content for .info

--- a/index.html
+++ b/index.html
@@ -30,7 +30,18 @@
             </div>
             </div>
             <div class="info">
-                
+                <div class="container">
+                    <div class="container-image"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="container">
+                    <div class="container-image"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="container">
+                    <div class="container-image"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
             </div>
             <div class="hero">
 
