--- a/index.html
+++ b/index.html
@@ -48,7 +48,15 @@
                 <p>-Thor, God of Thunder</p>
             </div>
         </div>
-        
+        <div class="cta">
+            <div class="message">
+                <div class="right">
+                    <h2>Call to action! It's time!</h2>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <button>Sign up</button>
+            </div>
+        </div>
         <div class="footer">
 
         </div>
