--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
         </div>
         <div class="footer">
-
+            <p>Copyright © The Odin Project 2021</p>
         </div>
     </body>
 </html>
