--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <div class="header">
             <div class="right-items">
-                <p>Header Logo</p>
+                <h1>Header Logo</h1>
             </div>
             <div class="left-items">
                 <ul>
@@ -19,7 +19,7 @@
             </div>
         </div>
         <div class="main">
-            <div class="image">
+            <div class="hero">
                 <div class="signup">
                     <h2>This website is awesome</h2>
                     <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
@@ -41,8 +41,8 @@
                     <p>this is some subtext under an illustration or image</p>
                 </div>
             </div>
-            <div class="hero">
-                <h2 class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</h2>
+            <div class="quote">
+                <h2>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</h2>
                 <p>-Thor, God of Thunder</p>
             </div>
             <div class="cta">
