--- a/index.html
+++ b/index.html
@@ -6,45 +6,52 @@
         <title>Odin: Landing Page</title>
     </head>
     <body>
-        <div class="header">
-            <div class="right-items">
-                <h1>Header Logo</h1>
+        <div class="quad1">   
+            <div class="header">
+                <div class="right-items">
+                    <h1>Header Logo</h1>
+                </div>
+                <div class="left-items">
+                    <ul>
+                        <li><a href="#">header link one</a></li>
+                        <li><a href="#">header link two</a></li>
+                        <li><a href="#">header link three</a></li>
+                    </ul>
+                </div>
             </div>
-            <div class="left-items">
-                <ul>
-                    <li><a href="#">header link one</a></li>
-                    <li><a href="#">header link two</a></li>
-                    <li><a href="#">header link three</a></li>
-                </ul>
+            <div class="hero">
+                    <div class="signup">
+                        <h2>This website is awesome</h2>
+                        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+                        <button>Sign up</button>
+                    </div>
+                    <div class="placeholder"><p>this is a placeholder for an image</p></div>
             </div>
         </div>
-        <div class="main">
-            <div class="hero">
-                <div class="signup">
-                    <h2>This website is awesome</h2>
-                    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-                    <button>Sign up</button>
-                </div>
-                <div class="placeholder">this is a placeholder for an image</div>
-            </div>
+        <div class="quad2">    
+            <h2>Some random information.</h2>
             <div class="info">
-                <div class="container">
-                    <div class="container-image"></div>
-                    <p>this is some subtext under an illustration or image</p>
-                </div>
-                <div class="container">
-                    <div class="container-image"></div>
-                    <p>this is some subtext under an illustration or image</p>
-                </div>
-                <div class="container">
-                    <div class="container-image"></div>
-                    <p>this is some subtext under an illustration or image</p>
-                </div>
+                    <div class="container">
+                        <div class="container-image"></div>
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
+                    <div class="container">
+                        <div class="container-image"></div>
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
+                    <div class="container">
+                        <div class="container-image"></div>
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
             </div>
+        </div>
+        <div class="quad3">
             <div class="quote">
-                <h2>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</h2>
-                <p>-Thor, God of Thunder</p>
+                    <h2>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</h2>
+                    <p>-Thor, God of Thunder</p>
             </div>
+        </div>
+        <div class="quad4">
             <div class="cta">
                 <div class="message">
                     <div class="right">
@@ -54,9 +61,9 @@
                     <button>Sign up</button>
                 </div>
             </div>
-        </div>
-        <div class="footer">
-            <p>Copyright © The Odin Project 2021</p>
+            <div class="footer">
+                <p>Copyright © The Odin Project 2021</p>
+            </div>
         </div>
     </body>
 </html>
