--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
                         <div class="container-image"></div>
                         <p>this is some subtext under an illustration or image</p>
                     </div>
+                    <div class="container">
+                        <div class="container-image"></div>
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
             </div>
         </div>
         <div class="quad3">
