--- a/index.html
+++ b/index.html
@@ -54,11 +54,13 @@
                 <p>-Thor, God of Thunder</p>
         </div>
         <div class="quad4">
+            <div class="message">    
                 <div class="right">
                     <h2>Call to action! It's time!</h2>
                     <p>Sign up for our product by clicking that button right over there!</p>
                 </div>
                 <button>Sign up</button>
+            </div>
         </div>
         <div class="footer">
             <p>Copyright © The Odin Project 2021</p>
